# 238-Variational-Shape-Reconstruction-via-Quadric-Error-Metrics

./: CMakeLists.txt  citation.txt  clustering_connected.ply  clustering_init.ply  test.off  test_soup.off  testedge.ply
include/: pch.h
include/QEM/: QEM.h
include/RegionGrow/: RegionGrow.h
include/core/: core.h
include/knn/: knn.h
include/reconstruction/: Variational_shape_reconstruction.h  clustering.h
src/: main.cpp
src/QEM/: QEM.cpp
src/RegionGrow/: RegionGrow.cpp
src/knn/: knn.cpp
